force-app/main/default/objects/FormStep__mdt/FormStep__mdt.object-meta.xml
<CustomObject>
    <label>FormStep</label>
    <pluralLabel>FormSteps</pluralLabel>
</CustomObject>