force-app/main/default/objects/FormStep__mdt/fields/ComponentName__c.field-meta.xml
<CustomField>
    <fullName>ComponentName__c</fullName>
    <description>LWC or Aura Component name</description>
    <inlineHelpText>LWC or Aura Component name</inlineHelpText>
    <label>ComponentName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>