force-app/main/default/objects/FormStep__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Flag to activate / deactivate step on the form</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>