force-app/main/default/objects/FormStep__mdt/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <defaultValue>&apos;c&apos;</defaultValue>
    <label>Namespace</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>