force-app/main/default/objects/FormStep__mdt/fields/ObjectAndFields__c.field-meta.xml
<CustomField>
    <fullName>ObjectAndFields__c</fullName>
    <inlineHelpText>JSON object and field set name in form of { “sObject”: “Account”, &quot;fieldSet&quot;: &quot;PersonalInformationFieldSet&quot; }</inlineHelpText>
    <label>ObjectAndFields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>